alteração no titulo

--- a/metas.html
+++ b/metas.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="metas.css">
-    <title>Metas</title>
+    <title>Metas para o ano</title>
 </head>
 <body>
     <h3>Minhas metas para esse ano:</h3>
